--- a/src/app/shared/grouped-data-view/grouped-data-view.component.html
+++ b/src/app/shared/grouped-data-view/grouped-data-view.component.html
@@ -17,6 +17,8 @@
   (dataStateChange)="onDataStateChanged($event)"
   [editSettings]="editSettings"
   [height]="650"
+  [groupSettings]="groupOptions"
+  [allowGrouping]="true"
 >
   <e-columns>
     <e-column
