--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -138,6 +138,7 @@
   height: 22px !important;
   background: #4d841d !important;
   border-color: white !important;
+  font-weight: 500 !important;
 }
 
 .e-input-group:not(.e-success):not(.e-warning):not(.e-error):not(.e-float-icon-left),
@@ -156,14 +157,11 @@
   background: white;
 }
 
-.e-input {
-  color: white !important;
-}
 
 #account-dropdown {
   float: right;
   margin-right: 20px;
-  margin-top: 7px;
+  margin-top: 10px;
   background: #4d841d;
   color: white;
   font-size: small;
@@ -175,16 +173,26 @@
 
 #account-dropdown-popup {
   width: 100px;
-  left: 1785.77px !important;
+  /* left: 1785.77px !important; */
   padding: 0px !important;
+  border-top: 1px solid #4d841d55;
+  border-radius: 2px;
+  padding-top: 2px !important;
+  padding-bottom: 2px !important;
 }
 
-.e-dropdown-popup ul,
-li {
+.e-dropdown-popup ul {
+  box-shadow: none;
+}
+
+.e-dropdown-popup li {
+  height: 20px !important;
+  align-items: center;
+  padding-left: 25px;
   color: #4d841d;
   box-shadow: none;
   font-size: small;
-  /* width: 100px; */
+  font-weight: 500;
 }
 
 .e-dropdown-popup li:hover {
@@ -228,7 +236,6 @@ i {
 .e-treeview .e-list-item.e-active>.e-text-content * {
   color: black;
 }
-
 
 .fa-user[_ngcontent-mhw-c0]::before * {
   content: '\f007' !important;
