--- a/src/app/shared/un-authorized-page/un-authorized-page.component.html
+++ b/src/app/shared/un-authorized-page/un-authorized-page.component.html
@@ -1,3 +1,8 @@
-<p>
-  un-authorized-page works!
-</p>
+<div class="alert">
+  <div class="icon">
+    <i class="fas fa-exclamation-triangle"></i>
+  </div>
+  <div class="text">
+    Oops, you dont have permission to access this page!
+  </div>
+</div>
