updated account view

--- a/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
+++ b/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
@@ -12,6 +12,9 @@
   [columnsList]="columnBluePrint"
   (dataStateChaged)="onDataStateChange($event)"
   [enableSearching]="true"
+  [addPrivilage]="'canAddAccount'"
+  [updatePrivilage]="'canUpdateAccount'"
+  [deletePrivilage]="'canDeleteAccount'"
   [showColumnChooser]="true"
   #grid
 >
