updated privilage setting

--- a/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
+++ b/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
@@ -6,6 +6,9 @@
   [pageSize]="20"
   [enableSorting]="true"
   [showUpdate]="true"
+  [addPrivilage]="'canAddAccountCategory'"
+  [updatePrivilage]="'canUpdateAccountCategory'"
+  [deletePrivilage]="'canDeleteAccountCategory'"
   (deleteRecord)="deleteCatagory($event)"
   [showPdfExport]="true"
   [showPrint]="true"
