--- a/src/app/features/ledgers/ledger-view/ledger-view.component.html
+++ b/src/app/features/ledgers/ledger-view/ledger-view.component.html
@@ -6,6 +6,9 @@
   [enableSorting]="true"
   [showUpdate]="true"
   [showDelete]="true"
+  [addPrivilage]="'canAddLedgerEntry'"
+  [updatePrivilage]="'canUpdateLedgerEntry'"
+  [deletePrivilage]="'canDeleteLedgerEntry'"
   (deleteRecord)="deleteLedgerEntry($event)"
   [showPrint]="true"
   [enableSearching]="true"
