--- a/src/app/features/lookups/lookup-view/lookup-view.component.html
+++ b/src/app/features/lookups/lookup-view/lookup-view.component.html
@@ -7,6 +7,9 @@
   [showPdfExport]="true"
   [columnsList]="columnBluePrint"
   [enableSearching]="true"
+  [addPrivilage]="'canAddLookups'"
+  [updatePrivilage]="'canUpdateLookups'"
+  [deletePrivilage]="'canDeleteLookups'"
   [showColumnChooser]="true"
   [enableSorting]="true"
   (dataStateChaged)="onDataStateChanged($event)"
