sidebar updated with privilages

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -240,3 +240,8 @@ i {
 .fa-user[_ngcontent-mhw-c0]::before * {
   content: '\f007' !important;
 }
+
+.treev {
+  background: #4d841d !important;
+  display: none;
+}
