--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -2,6 +2,9 @@
 <app-grouped-data-view
   [gridData]="data"
   [showUpdate]="true"
+  [addPrivilage]="'canAddAccount'"
+  [updatePrivilage]="'canUpdateAccount'"
+  [deletePrivilage]="'canDeleteAccount'"
   [showDelete]="true"
   [columnsList]="columnBluePrint"
   [groupBy]="groupBy"
