updated sidebar authorization

--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -11,5 +11,7 @@
   (dataStateChaged)="dataStateChange($event)"
   (deleteRecord)="deleteAccount($event)"
   #grid
+  [showPrint]="true"
+  [showExcelExport]="true"
 >
 </app-grouped-data-view>
