--- a/src/app/features/account-catagory/account-catagory-form/account-catagory-form.component.html
+++ b/src/app/features/account-catagory/account-catagory-form/account-catagory-form.component.html
@@ -30,6 +30,7 @@
               name="AccountType"
               formControlName="AccountType"
               [dataSource]="accountTypes"
+              [fields]="accountTypeFields"
             ></ejs-dropdownlist>
             <div
               class="e-error"
