updated account category overflow account

--- a/src/app/features/account-catagory/account-catagory-form/account-catagory-form.component.html
+++ b/src/app/features/account-catagory/account-catagory-form/account-catagory-form.component.html
@@ -44,6 +44,14 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-sm-6 col-xs-12">
+          <label for="overflowAccount">Overflow Account</label>
+          <app-account-category-selector
+            formControlName="OverFlowAccount"
+          ></app-account-category-selector>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-12">
           <app-form-options
             [isUpdate]="isUpdate"
