fixed grid issues

--- a/src/app/shared/grouped-data-view/grouped-data-view.component.html
+++ b/src/app/shared/grouped-data-view/grouped-data-view.component.html
@@ -13,6 +13,7 @@
   (toolbarClick)="toolbarClick($event)"
   [pageSettings]="initialPage"
   [filterSettings]="filterOptions"
+  (actionComplete)="actionEndHandler($event)"
   [showColumnChooser]="true"
   (dataStateChange)="onDataStateChanged($event)"
   [editSettings]="editSettings"
