updated unposted ledger edit

--- a/src/app/features/ledgers/ledger-view/ledger-view.component.html
+++ b/src/app/features/ledgers/ledger-view/ledger-view.component.html
@@ -15,4 +15,5 @@
   [enablePaging]="true"
   (dataStateChaged)="onDataStateChanged($event)"
   [showColumnChooser]="true"
+  [editRoute]="'ledgers'"
 ></app-data-view>
