--- a/src/app/features/ledgers/ledger/ledger.component.html
+++ b/src/app/features/ledgers/ledger/ledger.component.html
@@ -10,13 +10,15 @@
         <div class="row">
           <div class="col-5">
             <label for="voucherId">Voucher Id</label>
-            <input
-              type="text"
-              id="voucher"
-              name="voucher"
-              class="e-input"
+
+            <app-ledger-entry-selector
+              (selectionChanged)="onEntrySelected($event)"
               formControlName="VoucherId"
-            />
+              [next]="data?.Next"
+              [previous]="data?.Prev"
+              [showNavigator]="true"
+            ></app-ledger-entry-selector>
+
             <div class="e-error" *ngIf="VoucherId.errors && VoucherId.touched">
               <div *ngIf="VoucherId.errors['required']">
                 *Voucher Id is required
