--- a/src/app/features/ledgers/ledger/ledger.component.html
+++ b/src/app/features/ledgers/ledger/ledger.component.html
@@ -34,7 +34,7 @@
             >
             </ejs-datepicker>
             <ejs-maskedtextbox
-              mask="[0-1][0-3]/[0-3][0-9]/[2-9][0-9][0-9][0-9]"
+              mask="[2-9][0-9][0-9][0-9]/[0-2][0-3]/[0-3][0-9]"
               formControlName="Date"
               [value]="Date.value"
               id="date"
@@ -46,6 +46,7 @@
               <div *ngIf="Date.errors['required']">
                 *Date of Post is required
               </div>
+              <!-- [0-2[0-3]/[0-3][0-9]/[2-9][0-9][0-9][0-9]" -->
             </div>
           </div>
 
@@ -66,7 +67,7 @@
                 *Description is required!
               </div>
             </div>
-            <label for="description">Reference</label>
+            <label for="description" id="reference">Reference</label>
             <input
               type="text"
               id="reference"
