updated local storage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="info">
           <div class="name">
-            Appdiv system development
+           ECAFCO Finance
           </div>
           <div class="status">
             <small>Online</small>
