updated dasboard stat and others

--- a/src/app/features/dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard/dashboard.component.html
@@ -46,8 +46,8 @@
           <e-series
             [dataSource]="chartData"
             type="Line"
-            xName="month"
-            yName="sales"
+            xName="MonthString"
+            yName="Sales"
             width="2"
             name="China"
             [marker]="marker"
