updated user auth

--- a/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
+++ b/src/app/features/account-catagory/account-catagory-view/account-catagory-view.component.html
@@ -6,8 +6,8 @@
   [pageSize]="20"
   [enableSorting]="true"
   [showUpdate]="true"
-  [addPrivilage]="'canAddAccountCategory'"
-  [updatePrivilage]="'canUpdateAccountCategory'"
+  [addPrivilage]="'canAddNewAccountCategory'"
+  [updatePrivilage]="'canEditAccountCategory'"
   [deletePrivilage]="'canDeleteAccountCategory'"
   (deleteRecord)="deleteCatagory($event)"
   [showPdfExport]="true"
