--- a/src/app/features/account-type/account-type-view/account-type-view.component.html
+++ b/src/app/features/account-type/account-type-view/account-type-view.component.html
@@ -5,8 +5,8 @@
   [gridData]="data"
   [showAdd]="true"
   [showUpdate]="true"
-  [addPrivilage]="'canAddAccountType'"
-  [updatePrivilage]="'canUpdateAccountType'"
+  [addPrivilage]="'canAddNewAccountType'"
+  [updatePrivilage]="'canEditAccountType'"
   [deletePrivilage]="'canDeleteAccountType'"
   [showDelete]="true"
   [columnsList]="columnBluePrint"
