--- a/src/app/features/accounts/accounts-view/accounts-view.component.html
+++ b/src/app/features/accounts/accounts-view/accounts-view.component.html
@@ -2,8 +2,8 @@
 <app-grouped-data-view
   [gridData]="data"
   [showUpdate]="true"
-  [addPrivilage]="'canAddAccount'"
-  [updatePrivilage]="'canUpdateAccount'"
+  [addPrivilage]="'canAddNewAccount'"
+  [updatePrivilage]="'canEditAccount'"
   [deletePrivilage]="'canDeleteAccount'"
   [showDelete]="true"
   [columnsList]="columnBluePrint"
