--- a/src/app/features/ledgers/ledger-view/ledger-view.component.html
+++ b/src/app/features/ledgers/ledger-view/ledger-view.component.html
@@ -6,8 +6,8 @@
   [enableSorting]="true"
   [showUpdate]="true"
   [showDelete]="true"
-  [addPrivilage]="'canAddLedgerEntry'"
-  [updatePrivilage]="'canUpdateLedgerEntry'"
+  [addPrivilage]="'canAddNNewLedgerEntry'"
+  [updatePrivilage]="'canEditLedgerEntry'"
   [deletePrivilage]="'canDeleteLedgerEntry'"
   (deleteRecord)="deleteLedgerEntry($event)"
   [showPrint]="true"
