--- a/src/app/features/lookups/lookup-view/lookup-view.component.html
+++ b/src/app/features/lookups/lookup-view/lookup-view.component.html
@@ -7,8 +7,8 @@
   [showPdfExport]="true"
   [columnsList]="columnBluePrint"
   [enableSearching]="true"
-  [addPrivilage]="'canAddLookups'"
-  [updatePrivilage]="'canUpdateLookups'"
+  [addPrivilage]="'canAddNewLookups'"
+  [updatePrivilage]="'canEditLookups'"
   [deletePrivilage]="'canDeleteLookups'"
   [showColumnChooser]="true"
   [enableSorting]="true"
