added fiscal year managment

--- a/src/app/features/new-year-data/create-new-year-data/create-new-year-data.component.css
+++ b/src/app/features/new-year-data/create-new-year-data/create-new-year-data.component.css
@@ -1,27 +1,12 @@
-:host {
-  display: grid;
-  place-content: center;
-  height: 100vmin;
 
-}
 
-/* button {
-  background: #4d841d;
-  border: none;
-  border-radius: 2px;
-  box-shadow: azure;
-  color: white;
-  height: 50px;
-  width: 200px;
-  font-size: xx-large;
-} */
 
 button {
   width: 140px;
   height: 45px;
   text-transform: uppercase;
   color: white;
-  background: #4d841d;
+
   border: none;
   border-radius: 45px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 1);
@@ -29,4 +14,14 @@ button {
   cursor: pointer;
   outline: none;
   font-size: larger;
+}
+
+
+button.e-primary {
+    background: #4d841d;
+}
+
+
+button.e-danger {
+    background: red;
 }
