--- a/src/app/features/ledgers/ledger-view/ledger-view.component.html
+++ b/src/app/features/ledgers/ledger-view/ledger-view.component.html
@@ -6,7 +6,7 @@
   [enableSorting]="true"
   [showUpdate]="true"
   [showDelete]="true"
-  [addPrivilage]="'canAddNNewLedgerEntry'"
+  [addPrivilage]="'canAddNewLedgerEntry'"
   [updatePrivilage]="'canEditLedgerEntry'"
   [deletePrivilage]="'canDeleteLedgerEntry'"
   (deleteRecord)="deleteLedgerEntry($event)"
