--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="info">
           <div class="name">
-           ECAFCO Finance
+            ECAFCO Finance
           </div>
           <div class="status">
             <small>Online</small>
@@ -76,8 +76,7 @@
           (valueChange)="yearChanged($event)"
           [dataSource]="yearData"
           [fields]="yearFields"
-          [value]="'2011'"
-          [text]="'2011'"
+          [value]="selectedYear"
           [width]="100"
           placeholder="Year"
         ></ejs-dropdownlist>
