--- a/src/app/features/ledgers/ledger/ledger.component.html
+++ b/src/app/features/ledgers/ledger/ledger.component.html
@@ -244,3 +244,14 @@
     [submitDisabled]="ledgerForm.invalid"
   ></app-form-options>
 </form>
+<!-- <ejs-toast #element (created)="onCreate($event)" [position]="position">
+  <ng-template #title>
+    <div>success</div>
+  </ng-template>
+  <ng-template #content>
+    <div>Ledger entry made successfully!</div>
+  </ng-template>
+</ejs-toast>
+<button ejs-button [isPrimary]="true" (click)="btnClick($event)">
+  Show Toast
+</button> -->
