--- a/src/app/features/ledgers/ledger/ledger.component.html
+++ b/src/app/features/ledgers/ledger/ledger.component.html
@@ -244,14 +244,9 @@
     [submitDisabled]="ledgerForm.invalid"
   ></app-form-options>
 </form>
-<!-- <ejs-toast #element (created)="onCreate($event)" [position]="position">
-  <ng-template #title>
-    <div>success</div>
-  </ng-template>
-  <ng-template #content>
-    <div>Ledger entry made successfully!</div>
-  </ng-template>
-</ejs-toast>
-<button ejs-button [isPrimary]="true" (click)="btnClick($event)">
-  Show Toast
-</button> -->
+<div class="col-lg-12 control-section">
+  <div class="sample_container toast-type-section">
+    <ejs-toast #toasttype id="toasttype" [position]="position"></ejs-toast>
+    <div id="toast_default_target"></div>
+  </div>
+</div>
