Update Date on Ledger and Update New year data text

--- a/src/app/features/new-year-data/create-new-year-data/create-new-year-data.component.html
+++ b/src/app/features/new-year-data/create-new-year-data/create-new-year-data.component.html
@@ -5,8 +5,8 @@
         <div class="card-body">
           <div class="info">
             <p>
-              Subscribe here to get the latest news, updates and special offers
-              delivered directly to your inbox.Subscribe here to get the.
+              Create New Budger Year and Transfer the closing amount to new budger 
+              year you are only allowed to create one budget year after the closing date.
             </p>
           </div>
           <div class="button-cont">
@@ -24,9 +24,7 @@
         <div class="card-body">
           <div class="info">
             <p>
-              Subscribe here to get the latest news, updates and special offers
-              delivered directly to your inbox. Subscribe here to get the latest
-              news,
+              Delete Last Budget year. It only allow you to delete if there is no transaction created.
             </p>
           </div>
           <div class="button-cont">
