--- a/src/app/features/reports/checklist/checklist.component.html
+++ b/src/app/features/reports/checklist/checklist.component.html
@@ -36,11 +36,10 @@
           foreignKeyValue="Debit"
         ></e-column>
         <e-column
-          field="Date"
+          field="EtDate"
           headerText="Date"
           width="150"
-          type="date"
-          format="yMd"
+          type="string"
         ></e-column>
         <e-column
           field="Description"
